--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,15 +1,15 @@
 <h1>MAONI</h1>
 
-<%= for apprentice <- [1,2,3] do %>
+<%= for apprentice <- [1] do %>
   <section>
     <h2>Apprentice <%= apprentice %></h2>
     <img src="https://avatars2.githubusercontent.com/u/1850188?v=3&s=100" alt="apprentice face">
     <div>
       <h3>Blog posts</h3>
       <ul>
-        <li><a href="#">My last blog post</a></li>
-        <li><a href="#">My second last blog post</a></li>
-        <li><a href="#">My third last blog post</a></li>
+        <%= for post <- @posts do %>
+          <li><a href="<%= post.link %>" target="_blank"><%= post.title %></a></li>
+        <% end %>
       </ul>
       <h3>Pull requests</h3>
       <ul>
